# Roxy-Agent

./: AGENTS.md  README.md  README_en.md  pyproject.toml
scripts/: demo.sh
skills/web-research/: SKILL.md
src/roxy/: __init__.py  __main__.py
src/roxy/cli/: __init__.py  chat_cmd.py  config_cmd.py  doctor_cmd.py  eval_cmd.py  evolve_cmd.py  init_cmd.py  main.py  monitor_cmd.py  replicate_cmd.py  research_cmd.py
src/roxy/comm/: __init__.py
src/roxy/config/: __init__.py  loader.py  paths.py  schema.py
src/roxy/context/: __init__.py  manager.py
src/roxy/engine/: __init__.py  query_engine.py  session.py  tool_executor.py
src/roxy/evolution/: __init__.py  eval_runner.py  observer.py  patcher.py  planner.py  proposal.py  reviewer.py  runner.py  store.py  workspace.py
src/roxy/knowledge/: __init__.py
src/roxy/memory/: __init__.py  profile.py
src/roxy/models/: __init__.py  health.py  provider.py
src/roxy/replication/: replicate.py
tests/: __init__.py  conftest.py
tests/test_cli/: test_monitor_cmd.py  test_research_cmd.py
tests/test_config/: __init__.py  test_loader.py
tests/test_context/: test_manager.py
tests/test_engine/: test_query_engine.py  test_session.py
tests/test_evolution/: __init__.py  test_evolve.py  test_v08_safety.py
tests/test_memory/: test_profile.py
tests/test_models/: __init__.py  test_provider.py
tests/test_research/: test_digest.py  test_wechat_channel.py
tests/test_tools/: __init__.py  test_base.py  test_builtin.py  test_permissions.py  test_registry.py
tests/test_tui/: test_mascot_widget.py  test_slash_commands.py
(+18 files in other folders)
